--- a/mybib.bib
+++ b/mybib.bib
@@ -1,13 +1,3 @@
-@article{ref-journal,
-  title={Improvement of anomaly detection performance using packet flow regularity in industrial control networks},
-  author={Tamura, Kensuke and Matsuura, Kanta},
-  journal={IEICE Transactions on Fundamentals of Electronics, Communications and Computer Sciences},
-  volume={102},
-  number={1},
-  pages={65--73},
-  year={2019},
-  publisher={The Institute of Electronics, Information and Communication Engineers}
-}
 @article{1,
   title={Yield management in the airline industry},
   author={Donovan, Anthony W},
@@ -18,48 +8,70 @@
   year={2005},
   publisher={Embry-Riddle Aeronautical University}
 }
-@inproceedings{2,
+@article{2,
+  title={A review of revenue management: Recent generalizations and advances in industry applications},
+  author={Klein, Robert and Koch, Sebastian and Steinhardt, Claudius and Strauss, Arne K},
+  journal={European Journal of Operational Research},
+  volume={284},
+  number={2},
+  pages={397--412},
+  year={2020},
+  publisher={Elsevier}
+}
+@inproceedings{3,
   title={To buy or not to buy: mining airfare data to minimize ticket purchase price},
   author={Etzioni, Oren and Tuchinda, Rattapoom and Knoblock, Craig A and Yates, Alexander},
   booktitle={Proceedings of the ninth ACM SIGKDD international conference on Knowledge discovery and data mining},
   pages={119--128},
   year={2003}
 }
-@article{3,
-  title={A regression model for predicting optimal purchase timing for airline tickets},
-  author={Groves, William and Gini, Maria},
-  journal={University of Minnesota, Minneapolis, MN, Tech. Rep},
-  pages={1041--4347},
-  year={2011}
+@article{4,
+  title={Adaptive mechanisms in an airline ticket demand forecasting system},
+  author={Riedel, Silvia and Gabrys, Bogdan},
+  year={2003}
 }
-@inproceedings{4,
-  title={A data-mining approach to travel price forecasting},
-  author={Wohlfarth, Till and Cl{\'e}men{\c{c}}on, St{\'e}phan and Roueff, Fran{\c{c}}ois and Casellato, Xavier},
-  booktitle={2011 10th International Conference on Machine Learning and Applications and Workshops},
-  volume={1},
-  pages={84--89},
-  year={2011},
-  organization={IEEE}
+@inproceedings{5,
+  title={A model of world aircraft demand},
+  author={Sickles, RC and Good, D and Postert, AK and Getachew, L},
+  booktitle={Airport Facilities: Innovations for the Next Century. Proceedings of the 25th International Air Transportation Conference. American Society of Civil Engineers},
+  year={1998}
 }
-@article{5,
-  title={Flight ticket fare prediction model based on time-serial},
-  author={Zhao-Jun, Gu and Shuang, Wang and Yi, Zhao},
-  journal={Journal of Civil Aviation University of China},
-  volume={31},
-  number={2},
-  pages={80},
-  year={2013}
-}
-
 @inproceedings{6,
-  title={Machine learning strategies for time series forecasting},
-  author={Bontempi, Gianluca and Taieb, Souhaib Ben and Le Borgne, Yann-A{\"e}l},
-  booktitle={European business intelligence summer school},
-  pages={62--77},
-  year={2012},
+  title={Passenger flow forecast of sanya airport based on ARIMA model},
+  author={Li, Yuanhui and Han, Haiyun and Liu, Xia and Li, Chao},
+  booktitle={International Conference of Pioneering Computer Scientists, Engineers and Educators},
+  pages={442--454},
+  year={2018},
   organization={Springer}
 }
-@article{carmona2020sarima,
+@article{7,
+  title={Short-term Forecasting for Airline Industry: The Case of Indian Air Passenger and Air Cargo},
+  author={Madhavan, Meena and Ali Sharafuddin, Mohammed and Piboonrungroj, Pairach and Yang, Ching-Chiao},
+  journal={Global Business Review},
+  pages={0972150920923316},
+  year={2020},
+  publisher={SAGE Publications Sage India: New Delhi, India}
+}
+@article{8,
+  title={Autoregressive integrated moving average time series model for forecasting air pollution in Nanded city, Maharashtra, India},
+  author={Kulkarni, Govind Eknath and Muley, Aniket Avinash and Deshmukh, Nilesh Kailas and Bhalchandra, Parag Upendra},
+  journal={Modeling Earth Systems and Environment},
+  volume={4},
+  number={4},
+  pages={1435--1444},
+  year={2018},
+  publisher={Springer}
+}
+@article{9,
+  title={Forecast of passenger and freight traffic volume based on elasticity coefficient method and grey model},
+  author={Wang, Youan and Chen, Xumei and Han, Yanhui and Guo, Shuxia},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={96},
+  pages={136--147},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{10,
   title={SARIMA damp trend grey forecasting model for airline industry},
   author={Carmona-Ben{\'\i}tez, Rafael Bernardo and Nieto, Mar{\'\i}a Rosa},
   journal={Journal of Air Transport Management},
@@ -68,49 +80,25 @@
   year={2020},
   publisher={Elsevier}
 }
-@article{nieto2018arima+,
-  title={ARIMA+ GARCH+ Bootstrap forecasting method applied to the airline industry},
-  author={Nieto, Mar{\~A}a Rosa and Carmona-Ben{\~A}tez, Rafael Bernardo and others},
-  journal={Journal of Air Transport Management},
-  volume={71},
-  number={C},
-  pages={1--8},
-  year={2018},
-  publisher={Elsevier}
+@article{11,
+  title={Forecasting high-speed rail ridership using a simultaneous modeling approach},
+  author={Liu, Rongfang and Li, Andy},
+  journal={Transportation Planning and Technology},
+  volume={35},
+  number={5},
+  pages={577--590},
+  year={2012},
+  publisher={Taylor \& Francis}
 }
-@article{madhavan2020short,
-  title={Short-term Forecasting for Airline Industry: The Case of Indian Air Passenger and Air Cargo},
-  author={Madhavan, Meena and Ali Sharafuddin, Mohammed and Piboonrungroj, Pairach and Yang, Ching-Chiao},
-  journal={Global Business Review},
-  pages={0972150920923316},
-  year={2020},
-  publisher={SAGE Publications Sage India: New Delhi, India}
-}
-@inproceedings{pan2018novel,
-  title={A Novel LSTM-Based Daily Airline Demand Forecasting Method Using Vertical and Horizontal Time Series},
-  author={Pan, Boxiao and Yuan, Dongfeng and Sun, Weiwei and Liang, Cong and Li, Dongyang},
-  booktitle={Pacific-Asia Conference on Knowledge Discovery and Data Mining},
-  pages={168--173},
-  year={2018},
-  organization={Springer}
-}
-@article{7,
-  title={Dynamic demand forecasting and ticket assignment for high-speed rail revenue management in China},
-  author={Jiang, Xiushan and Chen, Xiqun and Zhang, Lei and Zhang, Ruifeng},
-  journal={Transportation Research Record},
-  volume={2475},
-  number={1},
-  pages={37--45},
+@inproceedings{12,
+  title={Passenger Flow Forecasting for Chinese High Speed Rail Network},
+  author={Leng, Nuannuan and Nie, Lei and Guo, Gencai and Wu, Xin},
+  booktitle={2015 International Conference on Mechatronics, Electronic, Industrial and Control Engineering (MEIC-15)},
+  pages={675--678},
   year={2015},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+  organization={Atlantis Press}
 }
-@inproceedings{8,
-  title={Air passenger forecasting by using a hybrid seasonal decomposition and least squares support vector regression approach},
-  author={Xie, Gang and Wang, Shouyang and Lai, Kin Keung},
-  booktitle={Proceedings of the 59th world statistics congress of the international statistical institute, Hong Kong},
-  year={2013}
-}
-@article{9,
+@article{13,
   title={Neural network based temporal feature models for short-term railway passenger demand forecasting},
   author={Tsai, Tsung-Hsien and Lee, Chi-Kang and Wei, Chien-Hung},
   journal={Expert Systems with Applications},
@@ -120,34 +108,77 @@
   year={2009},
   publisher={Elsevier}
 }
-@article{10,
-  title={Forecasting the short-term metro passenger flow with empirical mode decomposition and neural networks},
-  author={Wei, Yu and Chen, Mu-Chen},
-  journal={Transportation Research Part C: Emerging Technologies},
-  volume={21},
-  number={1},
-  pages={148--162},
-  year={2012},
+@article{14,
+  title={On the empirical performance of some new neural network methods for forecasting intermittent demand},
+  author={Babai, MZ and Tsadiras, A and Papadopoulos, C},
+  journal={IMA Journal of Management Mathematics},
+  volume={31},
+  number={3},
+  pages={281--305},
+  year={2020},
+  publisher={Oxford University Press}
+}
+@article{15,
+  title={An analysis of the prospects of ultra-long-haul airline operations using passenger demand data},
+  author={Grimme, Wolfgang and Bingemer, Stephan and Maertens, Sven},
+  journal={Transportation Research Procedia},
+  volume={51},
+  pages={208--216},
+  year={2020},
   publisher={Elsevier}
 }
-@inproceedings{geng2019spatiotemporal,
-  title={Spatiotemporal multi-graph convolution network for ride-hailing demand forecasting},
-  author={Geng, Xu and Li, Yaguang and Wang, Leye and Zhang, Lingyu and Yang, Qiang and Ye, Jieping and Liu, Yan},
-  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume={33},
-  pages={3656--3663},
+@article{16,
+  title={Forecasting the Short-Term Metro Ridership with Seasonal and Trend Decomposition Using Loess and LSTM Neural Networks},
+  author={Chen, Dewang and Zhang, Jianhua and Jiang, Shixiong},
+  journal={IEEE Access},
+  volume={8},
+  pages={91181--91187},
+  year={2020},
+  publisher={IEEE}
+}
+@article{17,
+  title={Passenger flow forecast of rail station based on multi-source data and long short term memory network},
+  author={Zhang, Zhe and Wang, Cheng and Gao, Yueer and Chen, Yewang and Chen, Jianwei},
+  journal={IEEE Access},
+  volume={8},
+  pages={28475--28483},
+  year={2020},
+  publisher={IEEE}
+}
+@article{18,
+  title={Dynamic demand forecasting and ticket assignment for high-speed rail revenue management in China},
+  author={Jiang, Xiushan and Chen, Xiqun and Zhang, Lei and Zhang, Ruifeng},
+  journal={Transportation Research Record},
+  volume={2475},
+  number={1},
+  pages={37--45},
+  year={2015},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+@inproceedings{19,
+  title={Air passenger forecasting by using a hybrid seasonal decomposition and least squares support vector regression approach},
+  author={Xie, Gang and Wang, Shouyang and Lai, Kin Keung},
+  booktitle={Proceedings of the 59th world statistics congress of the international statistical institute, Hong Kong},
+  year={2013}
+}
+@article{20,
+  title={Supply chain sales forecasting based on lightGBM and LSTM combination model},
+  author={ Weng, Tingyu  and  Liu, Wenyang  and  Xiao, Jun },
+  journal={Industrial Management \& Data Systems},
+  volume={ahead-of-print},
+  number={ahead-of-print},
   year={2019}
 }
-@article{he2020lightgcn,
-  title={LightGCN: Simplifying and Powering Graph Convolution Network for Recommendation},
-  author={He, Xiangnan and Deng, Kuan and Wang, Xiang and Li, Yan and Zhang, Yongdong and Wang, Meng},
-  journal={arXiv preprint arXiv:2002.02126},
-  year={2020}
-}
-@inproceedings{wei2019mmgcn,
+@inproceedings{21,
   title={MMGCN: Multi-modal graph convolution network for personalized recommendation of micro-video},
   author={Wei, Yinwei and Wang, Xiang and Nie, Liqiang and He, Xiangnan and Hong, Richang and Chua, Tat-Seng},
   booktitle={Proceedings of the 27th ACM International Conference on Multimedia},
   pages={1437--1445},
   year={2019}
+}
+@article{22,
+  title={LightGCN: Simplifying and Powering Graph Convolution Network for Recommendation},
+  author={He, Xiangnan and Deng, Kuan and Wang, Xiang and Li, Yan and Zhang, Yongdong and Wang, Meng},
+  journal={arXiv preprint arXiv:2002.02126},
+  year={2020}
 }
